# rusty-duke

./: Cargo.toml  LICENSE  README.md
rusty-duke-bevy/: Cargo.toml
rusty-duke-bevy/src/: game.rs  main.rs  menu.rs
rusty-duke-logic/: Cargo.toml
rusty-duke-logic/src/: ai.rs  lib.rs  logic.rs
rusty-duke-logic/src/ai/: alpha_beta.rs
rusty-duke-terminal/: Cargo.toml
rusty-duke-terminal/src/: main.rs
src/: ai.rs  board.rs  game.rs  lib.rs  logic.rs  piece.rs
src/ai/: alpha_beta.rs
