[package]
name = "rusty-duke"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Sixten Thames <pm@sith.st>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lazy_static = "1.4"
crossterm = "0.23"
strum = "0.24"
strum_macros = "0.24"
log = "0.4"
flexi_logger = "0.22"